Fix product detail vertical spacing

--- a/assets/sass/components/_webshop.scss
+++ b/assets/sass/components/_webshop.scss
@@ -193,7 +193,7 @@ ins {
 
 .related, .upsells {
 	h2 {
-		@apply pt-24 pb-12 ;
+		@apply pb-12;
 	}
 }
 
